# WSQASA

./: README.md  requirements.txt
data/: tweet_qa_train_QG_data.pkl  tweet_qa_train_form.pkl  tweet_qa_validation_form.pkl
notebooks/: Generate artificial dataset_.ipynb  Samples of the trained model.ipynb  WSQASA tweet_qa.ipynb  WSQASA_tweet_qa.ipynb
notebooks/create_synthetic_dataset/: Generate artificial dataset.ipynb  generate_artificial_dataste.ipynb  pyproject.toml
scripts/: 1_generate_artificial_dataset_.py  2_1_similarity_search_answer_test_df.py  2_similarity_search_answers_artificial_df.py  3_training_the_qa_model_on_syntatic_data.py  4_1_run_not_finetuned_model_over_dataset_with_specific_domain.py  4_run_model_over_dataset_with_specific_domain.py  5_compare_performance_of_models.py
