[tool.poetry]
name = "create-synthetic-dataset"
version = "0.1.0"
description = ""
authors = ["victor.tomita <victor.tomita@birdie.ai>"]
readme = "README.md"
packages = [{include = "create_synthetic_dataset"}]

[tool.poetry.dependencies]
python = "3.7.15"
transformers = "3.0.0"
scikit-learn = "1.0.1"
ipykernel = "5.5.6"
jupyter = "^1.0.0"
nltk = "3.5"
torch = "1.11.0"
pandas = "1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
